correct some css and gui

--- a/Phonebook-web/src/main/webapp/template/base.xhtml
+++ b/Phonebook-web/src/main/webapp/template/base.xhtml
@@ -7,7 +7,8 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<meta charset="UTF-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<h:outputStylesheet library="css" name="phonebook.css" />
 	<title>#{msgs.phonebook}</title>
 </h:head>
 
