--- a/Phonebook-web/src/main/webapp/resources/css/phonebook.css
+++ b/Phonebook-web/src/main/webapp/resources/css/phonebook.css
@@ -75,3 +75,27 @@ body {
 .main-fieldset {
 	margin-top: 2em;
 }
+
+.div {
+	display: block;
+}
+
+.main-icon {
+	float: right;
+	width: 127px;
+	text-align: center;
+	background-color: lavender;
+	border-radius: 10px;
+	margin: 10px;
+	padding: 10px;
+	vertical-align: middle;
+}
+
+.plus-and-save {
+	margin: 5px;
+	text-align: left;
+}
+
+.error-message {
+	color: red;
+}
